--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ alembic==0.9.9
 blinker==1.4
 chardet==3.0.4
 click==6.7
-Flask==1.0.2
+# Flask==1.0.2
+Flask==2.0.0
 Flask-Dance==0.14.0
 Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.1
@@ -10,7 +11,8 @@ Flask-Migrate==2.1.1
 Flask-OAuth==0.12
 Flask-OAuthlib==0.9.4
 Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
+# Flask-WTF==0.14.2
+Flask-WTF==0.14.3
 httplib2==0.11.3
 idna==2.6
 itsdangerous==0.24
@@ -29,6 +31,7 @@ SQLAlchemy==1.2.6
 SQLAlchemy-Utils==0.33.2
 urllib3==1.22
 URLObject==2.4.3
-Werkzeug==0.14.1
+# Werkzeug==0.14.1
+Werkzeug==2.0.0
 wincertstore==0.2
 WTForms==2.1
